fix: scrolling down markdown but still issue with bottom cutting off

--- a/src/carta_default.css
+++ b/src/carta_default.css
@@ -82,7 +82,7 @@
 /* Markdown input and renderer */
 .carta-theme__default .carta-input,
 .carta-theme__default .carta-renderer {
-	height: 600px;
+	height: 100%;
 	overflow-y: scroll;
 }
 
